341-IX. Про внесення змін до деяких законодавчих актів України щодо формування державної політики у сфері праці, трудових відносин, зайнятості населення та трудової міграції

--- a/Закони/Про_Кабінет_Міністрів_України.md
+++ b/Закони/Про_Кабінет_Міністрів_України.md
@@ -286,7 +286,7 @@
 
 1. Кабінет Міністрів України:
 
-    1) у сфері економіки, фінансів, трудових відносин, зайнятості населення, трудової міграції, оплати та охорони праці:
+    1) у сфері економіки та фінансів:
 
         * забезпечує проведення державної економічної політики, здійснює прогнозування та державне регулювання національної економіки; забезпечує розроблення і виконання загальнодержавних програм економічного та соціального розвитку;
 
@@ -328,17 +328,17 @@
 
         * виступає гарантом щодо позик, які у визначених законом про Державний бюджет України межах надаються іноземними державами, банками, міжнародними фінансовими організаціями, а в інших випадках - відповідно до міжнародних договорів України, згода на обов’язковість яких надана Верховною Радою України;
 
-        * виступає стороною соціального діалогу на національному рівні, сприяє його розвитку, відповідно до закону проводить консультації з іншими сторонами соціального діалогу щодо проектів законів, інших нормативно-правових актів з питань формування і реалізації державної соціальної та економічної політики, регулювання трудових, соціальних та економічних відносин;
-
-        * забезпечує здійснення державної політики у сферах трудових відносин, зайнятості населення, трудової міграції, оплати та охорони праці, розроблення та виконання відповідних державних програм, вирішує питання професійної орієнтації, підготовки та перепідготовки кадрів, регулює міграційні процеси, забезпечує виконання положень Генеральної угоди у межах взятих на себе зобов’язань
-  
     2) у сферах соціальної політики, охорони здоров’я, освіти, науки, культури, спорту, туризму, охорони навколишнього природного середовища та ліквідації наслідків надзвичайних ситуацій:
 
         * забезпечує проведення державної соціальної політики, вживає заходів щодо підвищення реальних доходів населення та забезпечує соціальний захист громадян;
 
         * виступає стороною соціального діалогу на національному рівні, сприяє його розвитку, відповідно до закону проводить консультації з іншими сторонами соціального діалогу щодо проектів законів, інших нормативно-правових актів з питань формування і реалізації державної соціальної та економічної політики, регулювання трудових, соціальних, економічних відносин;
 
+        * забезпечує підготовку проектів законів щодо державних соціальних стандартів і соціальних гарантій;
+
         * забезпечує розроблення та виконання державних програм соціальної допомоги, вживає заходів щодо зміцнення матеріально-технічної бази закладів соціального захисту осіб з інвалідністю, пенсіонерів та інших непрацездатних і малозабезпечених верств населення;
+
+        * забезпечує проведення державної політики зайнятості населення, розроблення та виконання відповідних державних програм, вирішує питання профорієнтації, підготовки та перепідготовки кадрів, регулює міграційні процеси, забезпечує виконання положень Генеральної угоди у межах взятих на себе зобов’язань;
 
         * забезпечує проведення державної політики у сферах охорони здоров’я, санітарно-епідемічного благополуччя, охорони материнства та дитинства, освіти, фізичної культури і доступність для громадян послуг медичних, освітніх та фізкультурно-оздоровчих закладів;
 
