--- a/Закони/Про_державну_допомогу_сім'ям_з_дітьми.md
+++ b/Закони/Про_державну_допомогу_сім'ям_з_дітьми.md
@@ -17,7 +17,7 @@
 
 Порядок призначення і виплати державної допомоги сім'ям з дітьми та перелік документів, необхідних для призначення допомоги за цим Законом, встановлюється Кабінетом Міністрів України.
 
-Роботу щодо призначення та виплати державної допомоги сім’ям з дітьми організовує центральний орган виконавчої влади, що забезпечує формування державної політики у сфері, соціального захисту населення.
+Роботу щодо призначення та виплати державної допомоги сім’ям з дітьми організовує центральний орган виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 **Стаття 2.** Поняття і терміни, що вживаються у цьому Законі
 
@@ -113,7 +113,7 @@
 
 Допомога батькам при народженні дитини призначається на підставі свідоцтва про народження дитини. Опікунам зазначена допомога призначається на підставі рішення про встановлення опіки.
 
-Для призначення допомоги при народженні дитини до органу праці та соціального захисту населення за умови пред’явлення паспорта або іншого документа, що посвідчує особу, та свідоцтва про народження дитини подається одним з батьків (опікуном), з яким постійно проживає дитина, заява за формою, встановленою центральним органом виконавчої влади, що забезпечує формування державної політики у сфері, соціального захисту населення, та копія свідоцтва про народження дитини.
+Для призначення допомоги при народженні дитини до органу праці та соціального захисту населення за умови пред’явлення паспорта або іншого документа, що посвідчує особу, та свідоцтва про народження дитини подається одним з батьків (опікуном), з яким постійно проживає дитина, заява за формою, встановленою центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, та копія свідоцтва про народження дитини.
 
 Даний перелік документів є вичерпним.
 
