--- a/Закони/Про_державну_соціальну_допомогу_малозабезпеченим_сім’ям.md
+++ b/Закони/Про_державну_соціальну_допомогу_малозабезпеченим_сім’ям.md
@@ -44,7 +44,7 @@
 
 * довідка встановленої форми про безпосередню участь особи в антитерористичній операції, про безпосередню участь у здійсненні заходів із забезпечення національної безпеки і оборони, відсічі і стримування збройної агресії Російської Федерації у Донецькій та Луганській областях.
 
-Форми заяви, довідки про склад сім’ї, декларації про доходи та майно встановлюються центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення.
+Форми заяви, довідки про склад сім’ї, декларації про доходи та майно встановлюються центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 Місцеві державні адміністрації для мети цього Закону мають право користуватися всіма офіційними джерелами інформації, в тому числі й інформацією органів доходів і зборів.
 
@@ -52,7 +52,7 @@
 
 Рішення про призначення державної соціальної допомоги чи про відмову в її наданні приймається місцевою державною адміністрацією протягом десяти календарних днів і наступного після його прийняття дня надсилається уповноваженому представнику малозабезпеченої сім’ї.
 
-Центральний орган виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, організовує роботу щодо призначення та виплати державної соціальної допомоги малозабезпеченим сім’ям.
+Центральний орган виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, організовує роботу щодо призначення та виплати державної соціальної допомоги малозабезпеченим сім’ям.
 
 Рішення про відмову в наданні державної соціальної допомоги має бути вмотивованим і містити роз’яснення порядку його оскарження.
 
@@ -60,7 +60,7 @@
 
 **Стаття 5.** Розмір державної соціальної допомоги
 
-Розмір державної соціальної допомоги визначається як різниця між прожитковим мінімумом для сім’ї та її середньомісячним сукупним доходом, який обчислюється за методикою, встановленою центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, але цей розмір не може бути більшим ніж 75 відсотків прожиткового мінімуму для сім’ї.
+Розмір державної соціальної допомоги визначається як різниця між прожитковим мінімумом для сім’ї та її середньомісячним сукупним доходом, який обчислюється за методикою, встановленою центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, але цей розмір не може бути більшим ніж 75 відсотків прожиткового мінімуму для сім’ї.
 
 До стабілізації економічного становища в Україні розмір державної соціальної допомоги визначається з урахуванням рівня забезпечення прожиткового мінімуму.
 
@@ -134,13 +134,13 @@
 
 **Стаття 12.** Облік одержувачів державної соціальної допомоги
 
-З метою ведення обліку сімей - одержувачів державної соціальної допомоги, забезпечення контролю за правильністю і своєчасністю її надання, а також для організації нормативно-довідкової інформації для місцевих державних адміністрацій, що призначають і здійснюють контроль за правильністю надання державної соціальної допомоги, центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, створюється єдина обліково-інформаційна система.
+З метою ведення обліку сімей - одержувачів державної соціальної допомоги, забезпечення контролю за правильністю і своєчасністю її надання, а також для організації нормативно-довідкової інформації для місцевих державних адміністрацій, що призначають і здійснюють контроль за правильністю надання державної соціальної допомоги, центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, створюється єдина обліково-інформаційна система.
 
 Єдина обліково-інформаційна система одержувачів державної соціальної допомоги формується та використовується з додержанням вимог Закону України "Про інформацію", інших законів України.
 
 **Стаття 13.** Контроль за правильністю надання державної соціальної допомоги
 
-Контроль за правильністю надання державної соціальної допомоги та використання коштів Державного бюджету України, спрямованих на надання державної соціальної допомоги, здійснює центральний орган виконавчої влади, що реалізує державну політику у сфері соціального захисту населення, безпосередньо та через керівника та уповноважених ним осіб центрального органу виконавчої влади, що реалізує державну політику з питань нагляду та контролю за додержанням законодавства про працю.
+Контроль за правильністю надання державної соціальної допомоги та використання коштів Державного бюджету України, спрямованих на надання державної соціальної допомоги, здійснює центральний орган виконавчої влади, що реалізує державну політику у сферах трудових відносин, соціального захисту населення, безпосередньо та через керівника та уповноважених ним осіб центрального органу виконавчої влади, що реалізує державну політику з питань нагляду та контролю за додержанням законодавства про працю.
 
 **Стаття 14.** Відповідальність за порушення законодавства про державну соціальну допомогу
 
