--- a/Закони/Про_забезпечення_прав_і_свобод_внутрішньо_переміщених_осіб.md
+++ b/Закони/Про_забезпечення_прав_і_свобод_внутрішньо_переміщених_осіб.md
@@ -30,7 +30,7 @@
 
 3. Для отримання довідки про взяття на облік внутрішньо переміщеної особи така особа звертається із заявою до структурного підрозділу з питань соціального захисту населення районних, районних у місті Києві державних адміністрацій, виконавчих органів міських, районних у містах (у разі утворення) рад за місцем проживання у порядку, встановленому Кабінетом Міністрів України.
 
-Форма заяви затверджується центральним органом виконавчої влади з формування та забезпечення реалізації державної політики у сферах соціального захисту, соціального обслуговування населення, волонтерської діяльності, з питань сім’ї та дітей, оздоровлення та відпочинку дітей, а також захисту прав депортованих за національною ознакою осіб, які повернулися в Україну.
+Форма заяви затверджується центральним органом виконавчої влади з формування та забезпечення реалізації державної політики у сферах зайнятості населення та трудової міграції, трудових відносин, соціального захисту, соціального обслуговування населення, волонтерської діяльності, з питань сім’ї та дітей, оздоровлення та відпочинку дітей, а також захисту прав депортованих за національною ознакою осіб, які повернулися в Україну.
 
 4. Заява подається внутрішньо переміщеною особою, у тому числі неповнолітніми дітьми, особисто, а малолітніми дітьми, недієздатними особами або особами, дієздатність яких обмежено, - через законного представника (далі - заявник).
 
