--- a/Закони/Про_загальнообов’язкове_державне_соціальне_страхування.md
+++ b/Закони/Про_загальнообов’язкове_державне_соціальне_страхування.md
@@ -128,7 +128,7 @@
 
 Якщо правління Фонду не може розпочати свою роботу у зв’язку з неявкою на засідання більшості складу від однієї із представницьких сторін, засідання правління переноситься на визначений присутніми членами правління строк. У цей період представницькі сторони проводять консультації.
 
-У разі повторної неявки більшості складу від однієї із представницьких сторін правління правомочне приймати рішення, за умови присутності на засіданні більшості складу правління. Рішення приймаються в установленому порядку і набирають чинності після погодження центральним органом виконавчої влади, що реалізує державну політику у сфері соціального захисту населення.
+У разі повторної неявки більшості складу від однієї із представницьких сторін правління правомочне приймати рішення, за умови присутності на засіданні більшості складу правління. Рішення приймаються в установленому порядку і набирають чинності після погодження центральним органом виконавчої влади, що реалізує державну політику у сферах трудових відносин, соціального захисту населення.
 
 6. Рішення правління Фонду, прийняте в межах його компетенції, є обов’язковим для виконання, у тому числі всіма страхувальниками та застрахованими особами, яких воно стосується. Рішення правління Фонду оформляється постановою. Постанови правління Фонду підлягають обов’язковому оприлюдненню на офіційному веб-сайті Фонду протягом 20 робочих днів після їх прийняття.
 
