--- a/Закони/Про_загальнообов’язкове_державне_соціальне_страхування_на_випадок_безробіття.md
+++ b/Закони/Про_загальнообов’язкове_державне_соціальне_страхування_на_випадок_безробіття.md
@@ -129,7 +129,7 @@
 
 * направляється до закладів охорони здоров’я для проходження попереднього медичного та наркологічного огляду відповідно до законодавства;
 
-* забезпечується місцем проживання на період проходження професійної підготовки або перепідготовки, підвищення кваліфікації та їй компенсуються витрати на проїзд до місця проходження навчання та у зворотному напрямку в порядку, встановленому центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення, за погодженням з правлінням Фонду загальнообов’язкового державного соціального страхування України на випадок безробіття.
+* забезпечується місцем проживання на період проходження професійної підготовки або перепідготовки, підвищення кваліфікації та їй компенсуються витрати на проїзд до місця проходження навчання та у зворотному напрямку в порядку, встановленому центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, за погодженням з правлінням Фонду загальнообов’язкового державного соціального страхування України на випадок безробіття.
 
 **Стаття 7-1.** Профілактика настання страхових випадків
 
@@ -143,7 +143,7 @@
 
 * інші профілактичні заходи, визначені правлінням Фонду.
 
-Порядок здійснення профілактичних заходів, спрямованих на запобігання настанню страхових випадків, затверджується правлінням Фонду загальнообов’язкового державного соціального страхування України на випадок безробіття за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення.
+Порядок здійснення профілактичних заходів, спрямованих на запобігання настанню страхових випадків, затверджується правлінням Фонду загальнообов’язкового державного соціального страхування України на випадок безробіття за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 Щодо осіб, які отримують допомогу по частковому безробіттю відповідно до статті 47 Закону України "Про зайнятість населення", не застосовуються профілактичні заходи, визначені у частині другій цієї статті.
 
@@ -222,7 +222,7 @@
 
 * вносить Міністрові - керівникові центрального органу виконавчої влади у сфері соціальної політики у разі порушення керівником центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, або його заступниками законодавства обґрунтоване подання про звільнення;
 
-* схвалює проект річного бюджету фонду та подає в установленому порядку центральному органу виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення, для внесення на затвердження Кабінету Міністрів України;
+* схвалює проект річного бюджету фонду та подає в установленому порядку центральному органу виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, для внесення на затвердження Кабінету Міністрів України;
 
 * заслуховує звіт про виконання бюджету Фонду;
 
@@ -322,7 +322,7 @@
 
 1. Фонд у своїй діяльності співпрацює з іншими страховими фондами, що здійснюють загальнообов’язкове державне соціальне страхування, у проведенні заходів, пов’язаних з виплатою забезпечення та наданням соціальних послуг, і має право в кожному конкретному випадку приймати спільні рішення щодо фінансування цих заходів.
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, його територіальні органи, з метою реалізації завдань, покладених на них відповідно до цього Закону та Закону України "Про зайнятість населення", взаємодіють з органами доходів і зборів, центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення, іншими центральними органами виконавчої влади, Державною прикордонною службою України шляхом обміну відповідною інформацією про отримані особами, зареєстрованими в установленому порядку як безробітні, доходи від здійснення підприємницької діяльності, роботи за кордоном, виконання роботи за трудовим договором, у тому числі за сумісництвом, виконання робіт (надання послуг) за цивільно-правовими угодами (договорами), ведення особистого селянського господарства, проведення інших заходів по виконанню цього Закону
+Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, його територіальні органи, з метою реалізації завдань, покладених на них відповідно до цього Закону та Закону України "Про зайнятість населення", взаємодіють з органами доходів і зборів, центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, іншими центральними органами виконавчої влади, Державною прикордонною службою України шляхом обміну відповідною інформацією про отримані особами, зареєстрованими в установленому порядку як безробітні, доходи від здійснення підприємницької діяльності, роботи за кордоном, виконання роботи за трудовим договором, у тому числі за сумісництвом, виконання робіт (надання послуг) за цивільно-правовими угодами (договорами), ведення особистого селянського господарства, проведення інших заходів по виконанню цього Закону
 
 2. Виплата пенсій особам, які достроково вийшли на пенсію відповідно до Закону України "Про зайнятість населення", у період до досягнення ними пенсійного віку здійснюється в установленому законодавством України порядку Пенсійним фондом України за рахунок коштів, що відшкодовуються Фондом.
 
@@ -425,7 +425,7 @@
 
 6. Одноразова виплата допомоги по безробіттю для організації безробітним підприємницької діяльності здійснюється у розмірі допомоги по безробіттю, нарахованої відповідно до цієї статті, у розрахунку на рік.
 
-7. Порядок надання допомоги по безробіттю, у тому числі одноразової її виплати для організації безробітним підприємницької діяльності, встановлюється центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення, за погодженням з правлінням Фонду.
+7. Порядок надання допомоги по безробіттю, у тому числі одноразової її виплати для організації безробітним підприємницької діяльності, встановлюється центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, за погодженням з правлінням Фонду.
 
 **Стаття 29.** Допомога на поховання
 
