--- a/Закони/Про_зайнятість_населення.md
+++ b/Закони/Про_зайнятість_населення.md
@@ -314,15 +314,15 @@
 
 **Стаття 17.** Органи, що забезпечують формування та реалізацію державної політики у сфері зайнятості населення
 
-1. Формування та реалізацію державної політики у сфері зайнятості населення забезпечують у межах своїх повноважень Верховна Рада України, Кабінет Міністрів України, центральний орган виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції, інші центральні органи виконавчої влади, Верховна Рада Автономної Республіки Крим та Рада міністрів Автономної Республіки Крим, місцеві державні адміністрації, органи місцевого самоврядування.
+1. Формування та реалізацію державної політики у сфері зайнятості населення забезпечують у межах своїх повноважень Верховна Рада України, Кабінет Міністрів України, центральний орган виконавчої влади у сфері соціальної політики, інші центральні органи виконавчої влади, Верховна Рада Автономної Республіки Крим та Рада міністрів Автономної Республіки Крим, місцеві державні адміністрації, органи місцевого самоврядування.
 
-2. Головним органом у системі центральних органів виконавчої влади з формування та забезпечення реалізації державної політики у сфері зайнятості населення є центральний орган виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції.
+2. Головним органом у системі центральних органів виконавчої влади з формування та реалізації державної політики у сфері зайнятості населення є центральний орган виконавчої влади у сфері соціальної політики.
 
 3. З метою реалізації державної політики зайнятості Кабінет Міністрів України розробляє і затверджує основні напрями реалізації державної політики у сфері зайнятості населення на середньостроковий період, у яких визначаються шляхи та способи розв'язання проблем зайнятості населення і передбачаються заходи з консолідації зусиль усіх сторін соціального діалогу, спрямованих на регулювання процесів, що відбуваються на ринку праці, для підвищення рівня зайнятості населення.
 
 Основні напрями реалізації державної політики у сфері зайнятості населення розробляються на підставі основних прогнозних параметрів соціально-економічного розвитку України, державних, галузевих та регіональних програм у частині їх впливу на сферу зайнятості населення, на розвиток трудового потенціалу з визначенням механізму їх реалізації.
 
-Координацію і контроль за виконанням основних напрямів реалізації державної політики у сфері зайнятості населення  зайнятості населення та трудової міграції здійснюють центральні органи виконавчої влади, що забезпечують формування та реалізацію державної політики у сферах.
+Координацію і контроль за виконанням основних напрямів реалізації державної політики у сфері зайнятості населення здійснює центральний орган виконавчої влади у сфері соціальної політики за участю центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції.
 
 Відповідальність за виконання основних напрямів реалізації державної політики у сфері зайнятості населення покладається на міністерства та інші центральні органи виконавчої влади, Раду міністрів Автономної Республіки Крим, обласні, Київську та Севастопольську міські державні адміністрації, органи місцевого самоврядування.
 
@@ -334,7 +334,7 @@
 
 3. У територіальних та місцевих програмах зайнятості населення визначаються основні показники ринку праці та заходи, спрямовані на збалансування попиту і пропонування робочої сили на територіальних ринках праці, соціального захисту безробітних, забезпечення зайнятості громадян, які мають додаткові гарантії у сприянні працевлаштуванню.
 
-4. Координація роботи із здійснення заходів, передбачених програмами зайнятості населення, покладається на центральний орган виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції, органи соціального діалогу у сфері зайнятості, Міністерство праці та соціального захисту населення Автономної Республіки Крим, структурні підрозділи у сфері праці і соціального захисту обласних, Київської та Севастопольської міських державних адміністрацій та органи місцевого самоврядування.
+4. Координація роботи із здійснення заходів, передбачених програмами зайнятості населення, покладається на центральний орган виконавчої влади у сфері соціальної політики, органи соціального діалогу у сфері зайнятості, Міністерство праці та соціального захисту населення Автономної Республіки Крим, структурні підрозділи у сфері праці і соціального захисту обласних, Київської та Севастопольської міських державних адміністрацій та органи місцевого самоврядування.
 
 **Стаття 19.** Органи соціального діалогу у сфері зайнятості
 
@@ -351,7 +351,7 @@
 
 **Стаття 21.** Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції
 
-1. Діяльність центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, спрямовується і координується Міністром - керівником центрального органу виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції.
+1. Діяльність центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, спрямовується і координується Міністром - керівником центрального органу виконавчої влади у сфері соціальної політики.
 
 2. Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, здійснює свої повноваження безпосередньо та через територіальні органи.
 
@@ -369,7 +369,7 @@
 
     1) реалізація державної політики у сфері зайнятості населення та трудової міграції;
 
-    2) внесення пропозицій Міністру - керівнику центрального органу виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції щодо формування державної політики у сфері зайнятості населення;
+    2) внесення пропозицій Міністру - керівнику центрального органу виконавчої влади у сфері соціальної політики щодо формування державної політики у сфері зайнятості населення;
 
     3) сприяння громадянам у підборі підходящої роботи;
 
@@ -407,7 +407,7 @@
 
     8) здійснюють в установленому законодавством порядку збирання, опрацювання, подання та поширення адміністративних даних про попит та пропонування робочої сили на ринку праці, надання соціальних послуг населенню та роботодавцям;
 
-    9) аналізують показники попиту та пропонування робочої сили і вносять центральному органу виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції пропозиції щодо прогнозування розвитку ринку праці;
+    9) аналізують показники попиту та пропонування робочої сили і вносять центральному органу виконавчої влади у сфері соціальної політики пропозиції щодо прогнозування розвитку ринку праці;
 
     10) беруть участь у розробленні основних напрямів реалізації державної політики у сфері зайнятості населення на середньостроковий період, територіальних програм зайнятості населення та їх виконанні;
 
@@ -425,7 +425,7 @@
 
     17) видають роботодавцям дозволи на застосування праці іноземців та осіб без громадянства з веденням обліку таких дозволів;
 
-    18) проводять розслідування страхових випадків та обґрунтованості виплати матеріального забезпечення в порядку, встановленому центральним органом виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції, центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійним фондом України. Таке розслідування здійснюється шляхом звіряння даних, зазначених у документах страхувальника, з базою даних центрального органу виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійного фонду України, а у разі потреби - шляхом проведення виїзних планових та позапланових перевірок страхувальників;
+    18) проводять розслідування страхових випадків та обґрунтованості виплати матеріального забезпечення в порядку, встановленому центральним органом виконавчої влади у сфері соціальної політики, центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійним фондом України. Таке розслідування здійснюється шляхом звіряння даних, зазначених у документах страхувальника, з базою даних центрального органу виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійного фонду України, а у разі потреби - шляхом проведення виїзних планових та позапланових перевірок страхувальників;
 
     19) здійснюють контроль за використанням коштів Фонду загальнообов'язкового державного соціального страхування України на випадок безробіття, застосовують в установленому законодавством порядку фінансові санкції та накладають адміністративні штрафи;
 
@@ -516,7 +516,7 @@
 
 Такі роботодавці можуть укладати з центральним органом виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, договір про працевлаштування визначеної кількості безробітних під час реалізації відповідних програм та проектів.
 
-3. Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, проводить моніторинг працевлаштування безробітних на створені нові робочі місця під час реалізації державних цільових програм та інфраструктурних проектів і подає за його результатами дані центральному органу виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції для інформування Кабінету Міністрів України.
+3. Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, проводить моніторинг працевлаштування безробітних на створені нові робочі місця під час реалізації державних цільових програм та інфраструктурних проектів і подає за його результатами дані центральному органу виконавчої влади у сфері соціальної політики для інформування Кабінету Міністрів України.
 
 **Стаття 26.** Стимулювання працевлаштування громадян, які недостатньо конкурентоспроможні на ринку праці
 
@@ -536,7 +536,7 @@
 
 **Стаття 27.** Стимулювання самозайнятості населення та створення нових робочих місць суб'єктами малого підприємництва
 
-1. Для стимулювання самозайнятості населення, підприємницької ініціативи центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, забезпечує надання безоплатних індивідуальних і групових консультацій з питань організації та провадження підприємницької діяльності із залученням на громадських засадах працівників органів державної влади у порядку, встановленому центральним органом виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції.
+1. Для стимулювання самозайнятості населення, підприємницької ініціативи центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, забезпечує надання безоплатних індивідуальних і групових консультацій з питань організації та провадження підприємницької діяльності із залученням на громадських засадах працівників органів державної влади у порядку, встановленому центральним органом виконавчої влади у сфері соціальної політики.
 
 Безробітним з числа застрахованих осіб, які виявили бажання провадити підприємницьку діяльність, виплачується допомога по безробіттю одноразово для організації такої діяльності.
 
@@ -596,7 +596,7 @@
 
 3. Порядок видачі державною службою зайнятості ваучерів затверджується Кабінетом Міністрів України.
 
-Перелік професій, спеціальностей, напрямів підготовки та підвищення кваліфікації, для навчання за якими може бути виданий ваучер, затверджується центральним органом виконавчої влади, що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції.
+Перелік професій, спеціальностей, напрямів підготовки та підвищення кваліфікації, для навчання за якими може бути виданий ваучер, затверджується центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 **Стаття 31.** Організація громадських та інших робіт тимчасового характеру
 
@@ -657,7 +657,7 @@
 
     3) проведення професійного відбору, що полягає у встановленні відповідності особи вимогам, які визначені для конкретних видів професійної діяльності та посад.
 
-2. Порядок надання послуг з професійної орієнтації осіб затверджується центральним органом виконавчої влади, що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції.
+2. Порядок надання послуг з професійної орієнтації осіб затверджується центральним органом виконавчої влади, що реалізує державну політику у сфері соціальної політики.
 
 **Стаття 34.** Професійне навчання
 
@@ -732,7 +732,7 @@
 
     3) забезпечувати захист інформації, що надійшла від громадян, які звертаються з метою працевлаштування, та дотримання правил використання і поширення такої інформації, встановлених законами України "Про інформацію" та "Про захист персональних даних", а також конфіденційність комерційної інформації роботодавців відповідно до закону;
 
-    4) подавати територіальним органам центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, відомості про чисельність працевлаштованих ними осіб у порядку, встановленому центральним органом виконавчої влади, що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції, за погодженням з центральним органом виконавчої влади із забезпечення реалізації державної політики у галузі статистики.
+    4) подавати територіальним органам центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, відомості про чисельність працевлаштованих ними осіб у порядку, встановленому центральним органом виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, за погодженням з центральним органом виконавчої влади із забезпечення реалізації державної політики у галузі статистики.
 
 5. Суб'єкти господарювання, які надають послуги з посередництва у працевлаштуванні, не мають права:
 
@@ -1246,7 +1246,7 @@
 
 7. Підприємство не може звернутися за наступним одержанням з Фонду загальнообов'язкового державного соціального страхування України на випадок безробіття коштів для виплати працівникам допомоги по частковому безробіттю раніше ніж через рік після закінчення строку виплати допомоги по частковому безробіттю.
 
-8. Порядок надання допомоги по частковому безробіттю встановлюється центральним органом виконавчої влади що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції.
+8. Порядок надання допомоги по частковому безробіттю встановлюється центральним органом виконавчої влади у сфері соціальної політики.
 
 **Стаття 48.** Масове вивільнення працівників з ініціативи роботодавця
 
@@ -1299,7 +1299,7 @@
 
     3) здійснювати інші заходи щодо сприяння зайнятості населення, передбачені колективними договорами та угодами, укладеними на національному, галузевому та регіональному рівнях;
 
-    4) своєчасно та в повному обсязі у порядку, затвердженому центральним органом виконавчої влади, що забезпечує формування державної політики у сфері зайнятості населення та трудової міграції, за погодженням з центральним органом виконавчої влади із забезпечення реалізації державної політики у галузі статистики, подавати територіальним органам центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, інформацію про:
+    4) своєчасно та в повному обсязі у порядку, затвердженому центральним органом виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, за погодженням з центральним органом виконавчої влади із забезпечення реалізації державної політики у галузі статистики, подавати територіальним органам центрального органу виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, інформацію про:
 
         * попит на робочу силу (вакансії);
 
