--- a/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
+++ b/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
@@ -148,7 +148,7 @@
 
 **Стаття 5.** Облік платників єдиного внеску
 
-1. Облік осіб, зазначених у пунктах 1, 4, 5 та 5-1 частини першої статті 4 цього Закону, ведеться в порядку, встановленому центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з Пенсійним фондом та фондами загальнообов'язкового державного соціального страхування, а щодо застрахованих осіб, які є учасниками накопичувальної системи загальнообов'язкового державного пенсійного страхування (далі - учасниками накопичувальної пенсійної системи), - з національною комісією, що здійснює державне регулювання у сфері ринків фінансових послуг, центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення, та Пенсійним фондом.
+1. Облік осіб, зазначених у пунктах 1, 4, 5 та 5-1 частини першої статті 4 цього Закону, ведеться в порядку, встановленому центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з Пенсійним фондом та фондами загальнообов'язкового державного соціального страхування, а щодо застрахованих осіб, які є учасниками накопичувальної системи загальнообов'язкового державного пенсійного страхування (далі - учасниками накопичувальної пенсійної системи), - з національною комісією, що здійснює державне регулювання у сфері ринків фінансових послуг, центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, та Пенсійним фондом.
 
 Взяття на облік осіб, зазначених у пунктах 1, 4, 5 та 5-1 частини першої статті 4 цього Закону, здійснюється органом доходів і зборів шляхом внесення відповідних відомостей до реєстру страхувальників.
 
@@ -178,7 +178,7 @@
 
     * у платників, зазначених у пункті 16 частини першої статті 4 цього Закону, - з дня направлення непрацюючого іншого з подружжя працівника дипломатичної служби, який перебуває за кордоном за місцем довготермінового відрядження такого працівника, по день перетину кордону України у зв’язку з остаточним поверненням в Україну.
 
-5. Державна служба зайнятості інформує Пенсійний фонд у порядку, встановленому центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення, про реєстрацію (зняття з реєстрації) трудового договору між фізичною особою - підприємцем або іншою фізичною особою та працівником не пізніше наступного робочого дня після її проведення.
+5. Державна служба зайнятості інформує Пенсійний фонд у порядку, встановленому центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, про реєстрацію (зняття з реєстрації) трудового договору між фізичною особою - підприємцем або іншою фізичною особою та працівником не пізніше наступного робочого дня після її проведення.
 
 **Стаття 6.** Права та обов'язки платника єдиного внеску
 
@@ -325,7 +325,7 @@
 
 27. Суми фінансових санкцій розподіляються відповідно до пропорцій, визначених для розподілу єдиного внеску.
 
-28. У разі необхідності центральні органи виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення, за пропозицією центрального органу виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, правлінь відповідних фондів загальнообов'язкового державного соціального страхування подає узгоджені зі сторонами соціального діалогу зміни розміру єдиного внеску для внесення їх на розгляд Верховної Ради України та пропорції розподілу за видами загальнообов'язкового державного соціального страхування для їх затвердження Кабінетом Міністрів України.
+28. У разі необхідності центральний орган виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, за пропозицією центрального органу виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, правлінь відповідних фондів загальнообов'язкового державного соціального страхування подає узгоджені зі сторонами соціального діалогу зміни розміру єдиного внеску для внесення їх на розгляд Верховної Ради України та пропорції розподілу за видами загальнообов'язкового державного соціального страхування для їх затвердження Кабінетом Міністрів України.
 
 Розрахунок розподілу єдиного внеску за видами загальнообов'язкового державного соціального страхування проводиться на підставі звітності про нарахування єдиного внеску за результатами попереднього року.
 
@@ -584,7 +584,7 @@
 
 1. Органи доходів і зборів зобов'язані:
 
-    1) надавати на безоплатній основі інформацію з реєстру страхувальників Державного реєстру Пенсійному фонду та фондам загальнообов'язкового державного соціального страхування, органам праці та соціального захисту населення, центральному органу виконавчої влади, що забезпечує реалізацію державної політики з питань нагляду та контролю за додержанням законодавства про працю, в порядку, визначеному центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з Пенсійним фондом, фондами загальнообов'язкового державного соціального страхування та центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення;
+    1) надавати на безоплатній основі інформацію з реєстру страхувальників Державного реєстру Пенсійному фонду та фондам загальнообов'язкового державного соціального страхування, органам праці та соціального захисту населення, центральному органу виконавчої влади, що забезпечує реалізацію державної політики з питань нагляду та контролю за додержанням законодавства про працю, в порядку, визначеному центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з Пенсійним фондом, фондами загальнообов'язкового державного соціального страхування та центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення;
 
     2) щокварталу інформувати Кабінет Міністрів України про основні показники сплати єдиного внеску. Перелік показників, порядок та строки інформування визначаються Кабінетом Міністрів України;
 
@@ -604,7 +604,7 @@
 
 1. Пенсійний фонд та його територіальні органи зобов'язані:
 
-    1) надавати на безоплатній основі інформацію з реєстру застрахованих осіб Державного реєстру органам доходів і зборів, фондам загальнообов'язкового державного соціального страхування, органам праці та соціального захисту в порядку, визначеному Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення, та фондами загальнообов'язкового державного соціального страхування;
+    1) надавати на безоплатній основі інформацію з реєстру застрахованих осіб Державного реєстру органам доходів і зборів, фондам загальнообов'язкового державного соціального страхування, органам праці та соціального захисту в порядку, визначеному Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, та фондами загальнообов'язкового державного соціального страхування;
 
     2) забезпечувати своєчасне внесення відомостей до реєстру застрахованих осіб Державного реєстру;
 
@@ -641,7 +641,7 @@
 
 2. Між центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійним фондом, що ведуть Державний реєстр, та фондами загальнообов'язкового державного соціального страхування здійснюється обмін інформацією на безоплатній основі в порядку, встановленому центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійним фондом за погодженням з фондами загальнообов'язкового державного соціального страхування.
 
-3. Пенсійний фонд та центральний орган виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, здійснюють обмін інформацією з Державного реєстру та Централізованого банку даних з проблем інвалідності у порядку, встановленому Пенсійним фондом спільно із зазначеними центральними органами виконавчої влади.
+3. Пенсійний фонд та центральний орган виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, здійснюють обмін інформацією з Державного реєстру та Централізованого банку даних з проблем інвалідності у порядку, встановленому Пенсійним фондом спільно із зазначеним центральним органом виконавчої влади.
 
 4. Пенсійний фонд та центральний орган виконавчої влади у сфері освіти і науки здійснюють обмін інформацією з Державного реєстру на безоплатній основі у порядку, встановленому Пенсійним фондом спільно із зазначеним центральним органом виконавчої влади.
 
@@ -649,9 +649,9 @@
 
 5. Інформація з Державного реєстру надається на запит органів праці та соціального захисту населення для призначення всіх видів державної соціальної допомоги та субсидій для відшкодування витрат на оплату житлово-комунальних послуг, придбання скрапленого газу, твердого та рідкого пічного побутового палива у порядку та за формою, встановленими Пенсійним фондом спільно з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення.
 
-Обмін інформацією про відомості, що містять ознаки використання праці неоформлених працівників та порушень законодавства про працю, здійснюється центральним органом виконавчої влади, що забезпечує реалізацію державної політики з питань нагляду та контролю за додержанням законодавства про працю, центральним органом виконавчої влади, що реалізує державну податкову і митну політику, в порядку, затвердженому Пенсійним фондом за погодженням з центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення.
+Обмін інформацією про відомості, що містять ознаки використання праці неоформлених працівників та порушень законодавства про працю, здійснюється центральним органом виконавчої влади, що забезпечує реалізацію державної політики з питань нагляду та контролю за додержанням законодавства про працю, центральним органом виконавчої влади, що реалізує державну податкову і митну політику, в порядку, затвердженому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
-Інформація з Державного реєстру з метою її використання для обслуговування громадян (за їхньою згодою) надається на запит роботодавців, банків, підприємств, установ та організацій у порядку, встановленому Пенсійним фондом за погодженням із центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення.
+Інформація з Державного реєстру з метою її використання для обслуговування громадян (за їхньою згодою) надається на запит роботодавців, банків, підприємств, установ та організацій у порядку, встановленому Пенсійним фондом за погодженням із центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 6. Інформація з реєстру страхувальників Державного реєстру надається на запит платників єдиного внеску та/або застрахованих осіб у порядку та за формою, встановленими центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійним фондом за погодженням з фондами загальнообов’язкового державного соціального страхування.
 
@@ -695,7 +695,7 @@
 
 2. До реєстру страхувальників вносяться такі відомості:
 
-    1) податковий номер юридичних осіб (ідентифікаційний номер фізичних осіб - платників податків). Відомості про осіб, які через релігійні або інші переконання відмовилися від ідентифікаційного номера та мають відповідний запис у безконтактному електронному носії паспорта громадянина України про наявність у них права здійснювати будь-які платежі без ідентифікаційного номера, обліковуються в порядку, встановленому центральним органом державної влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення, та Пенсійним фондом;
+    1) податковий номер юридичних осіб (ідентифікаційний номер фізичних осіб - платників податків). Відомості про осіб, які через релігійні або інші переконання відмовилися від ідентифікаційного номера та мають відповідний запис у безконтактному електронному носії паспорта громадянина України про наявність у них права здійснювати будь-які платежі без ідентифікаційного номера, обліковуються в порядку, встановленому центральним органом державної влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, та Пенсійним фондом;
 
     2) найменування (для фізичних осіб - підприємців та фізичних осіб, які використовують найману працю, - прізвище, ім'я, по батькові);
 
@@ -727,7 +727,7 @@
 
 Відомості про фізичних осіб - підприємців та осіб, які провадять незалежну професійну діяльність, подаються безпосередньо зазначеними особами.
 
-Порядок та строки подання відомостей, зазначених в абзацах першому - третьому цієї частини, встановлюються Пенсійним фондом за погодженням з центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення.
+Порядок та строки подання відомостей, зазначених в абзацах першому - третьому цієї частини, встановлюються Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 3. На кожну застраховану особу заводиться персональна електронна облікова картка, до якої включаються такі відомості:
 
@@ -803,7 +803,7 @@
 
 4. Центральний орган виконавчої влади, що реалізує державну політику у сфері державної реєстрації актів цивільного стану, за формою, встановленою відповідно до законодавства, протягом десяти робочих днів після реєстрації смерті особи подає відповідні відомості територіальному органу Пенсійного фонду.
 
-5. Зміни та уточнення вносяться до відомостей реєстру застрахованих осіб у порядку, встановленому Пенсійним фондом за погодженням з центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення.
+5. Зміни та уточнення вносяться до відомостей реєстру застрахованих осіб у порядку, встановленому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 6. Відомості про страховий стаж та заробітну плату (дохід, грошове забезпечення), розмір сплаченого єдиного внеску та інші дані, що містяться в реєстрі застрахованих осіб, використовуються для обчислення та призначення страхових виплат за загальнообов'язковим державним соціальним страхуванням.
 
@@ -850,7 +850,7 @@
 
 1. Банки під час відкриття рахунків зобов'язані вимагати від юридичних та фізичних осіб, зазначених у пункті 1 частини першої статті 4 цього Закону, документи, що підтверджують їх взяття на облік в органі доходів і зборів як платників єдиного внеску, або виписку з Єдиного державного реєстру юридичних осіб та фізичних осіб - підприємців (для осіб, зазначених в абзацах другому, третьому, п'ятому та сьомому пункту 1 частини першої статті 4 цього Закону, взяття на облік яких у в органі доходів і зборів здійснюється на підставі відомостей з реєстраційної картки, наданих державним реєстратором згідно із Законом України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців".
 
-2. Банки приймають від платників єдиного внеску, зазначених у пункті 1 частини першої статті 4 цього Закону, платіжні доручення та інші розрахункові документи на видачу (перерахування) коштів для виплати заробітної плати, на які відповідно до цього Закону нараховується єдиний внесок, та здійснюють видачу (перерахування) зазначених коштів лише за умови одночасного подання платником розрахункових документів про перерахування коштів для сплати відповідних сум єдиного внеску або документів, що підтверджують фактичну сплату таких сум у порядку, визначеному центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику за погодженням з Національним банком України та центральними органами виконавчої влади, що забезпечують формування державної політики у сферах праці, трудових відносин та зайнятості населення, соціального захисту населення.
+2. Банки приймають від платників єдиного внеску, зазначених у пункті 1 частини першої статті 4 цього Закону, платіжні доручення та інші розрахункові документи на видачу (перерахування) коштів для виплати заробітної плати, на які відповідно до цього Закону нараховується єдиний внесок, та здійснюють видачу (перерахування) зазначених коштів лише за умови одночасного подання платником розрахункових документів про перерахування коштів для сплати відповідних сум єдиного внеску або документів, що підтверджують фактичну сплату таких сум у порядку, визначеному центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику за погодженням з Національним банком України та центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 У разі невиконання цієї вимоги банки за рахунок власних коштів у порядку, встановленому Національним банком України, сплачують відповідному територіальному органу доходів і зборів суму, що дорівнює сумі несплаченого єдиного внеску, з правом зворотної вимоги до платників єдиного внеску щодо відшкодування цієї суми.
 
@@ -997,7 +997,7 @@
 
 4. У період до перетворення Пенсійного фонду на неприбуткову самоврядну організацію відповідно до пункту 12 розділу XV "Прикінцеві положення" Закону України "Про загальнообов'язкове державне пенсійне страхування" завдання та функції Пенсійного фонду та його територіальних органів щодо збору та ведення обліку єдиного внеску виконують відповідно Пенсійний фонд та головні управління Пенсійного фонду України в Автономній Республіці Крим, областях, містах Києві та Севастополі, управління Пенсійного фонду України в районах, містах, районах у містах.
 
-5. До запровадження подання до Пенсійного фонду звітності щодо персоніфікованих відомостей про заробітну плату (дохід, грошове забезпечення) застрахованих осіб, на яку нараховано і з якої сплачено єдиний внесок, та інших відомостей відповідно до частини другої статті 20 цього Закону стосовно всіх застрахованих осіб роботодавці, фізичні особи - підприємці та особи, які провадять незалежну професійну діяльність, зобов'язані подавати до територіальних органів Пенсійного фонду персоніфіковані відомості про застрахованих осіб, з якими стався нещасний випадок на виробництві або професійне захворювання, а також осіб, яких звільнено з роботи за період після подання останнього звіту щодо персоніфікованого обліку, в порядку, встановленому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення.
+5. До запровадження подання до Пенсійного фонду звітності щодо персоніфікованих відомостей про заробітну плату (дохід, грошове забезпечення) застрахованих осіб, на яку нараховано і з якої сплачено єдиний внесок, та інших відомостей відповідно до частини другої статті 20 цього Закону стосовно всіх застрахованих осіб роботодавці, фізичні особи - підприємці та особи, які провадять незалежну професійну діяльність, зобов'язані подавати до територіальних органів Пенсійного фонду персоніфіковані відомості про застрахованих осіб, з якими стався нещасний випадок на виробництві або професійне захворювання, а також осіб, яких звільнено з роботи за період після подання останнього звіту щодо персоніфікованого обліку, в порядку, встановленому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 6. У разі погашення до 1 січня 2011 року заборгованості із сплати внесків на загальнообов'язкове державне соціальне страхування на випадок безробіття, у зв'язку з тимчасовою втратою працездатності та витратами, зумовленими похованням, від нещасного випадку на виробництві та професійного захворювання, які спричинили втрату працездатності, що виникла до 1 липня 2010 року, заборгованість із сплати фінансових санкцій (пені та штрафів) підлягає списанню.
 
