--- a/Закони/Про_зовнішню_трудову_міграцію.md
+++ b/Закони/Про_зовнішню_трудову_міграцію.md
@@ -88,7 +88,7 @@
 
 1. Формування та реалізацію державної політики у сфері зовнішньої трудової міграції в межах своїх повноважень забезпечують Кабінет Міністрів України, центральні органи виконавчої влади, а також місцеві державні адміністрації та органи місцевого самоврядування.
 
-2. Головним органом у системі центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сфері зовнішньої трудової міграції, є центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сфері праці, зайнятості населення та трудової міграції.
+2. Головним органом у системі центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сфері зовнішньої трудової міграції, є центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сфері праці та соціальної політики, зайнятості населення та трудової міграції.
 
 **Стаття 7.** Міжнародне співробітництво у сфері зовнішньої трудової міграції
 
@@ -147,7 +147,7 @@
 
 1. Держава сприяє реінтеграції в суспільство трудових мігрантів і членів їхніх сімей шляхом здійснення комплексу соціальних, правових, економічних та інших заходів, передбачених законодавством.
 
-2. Відповідальним за реінтеграцію трудових мігрантів є центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сфері праці, зайнятості населення та трудової міграції.
+2. Відповідальним за реінтеграцію трудових мігрантів є центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сфері праці та соціальної політики, зайнятості населення та трудової міграції.
 
 3. Центральні та місцеві органи виконавчої влади у межах своїх повноважень сприяють реінтеграції трудових мігрантів, які виявили намір повернутися або повернулися в Україну.
 
