--- a/Закони/Про_колективні_договори_і_угоди.md
+++ b/Закони/Про_колективні_договори_і_угоди.md
@@ -164,7 +164,7 @@
 
 Сторони, що уклали угоду, повинні інформувати громадян через засоби масової інформації про зміни та доповнення до угоди та хід її реалізації і забезпечити розміщення тексту угоди у засобах масової інформації.
 
-Галузеві (міжгалузеві) і територіальні (обласні та республіканська) угоди підлягають повідомній реєстрації в установленому порядку центральним органом виконавчої влади у сфері соціальної політики, а колективні договори і територіальні угоди іншого рівня - місцевими органами виконавчої влади або органами місцевого самоврядування.
+Галузеві (міжгалузеві) і територіальні (обласні та республіканська) угоди підлягають повідомній реєстрації в установленому порядку центральним органом виконавчої влади що забезпечує формування державної політики у сфері трудових відносин, а колективні договори і територіальні угоди іншого рівня - місцевими органами виконавчої влади або органами місцевого самоврядування.
 
 Порядок повідомної реєстрації галузевих (міжгалузевих) і територіальних угод, колективних договорів затверджується Кабінетом Міністрів України.
 
@@ -255,6 +255,3 @@
 Ідентифікатор: [3356-XII](https://zakon.rada.gov.ua/laws/show/3356-12)
 
 [Картка документа](https://zakon.rada.gov.ua/laws/card/3356-12)
-
-
-
