--- a/Закони/Про_оплату_праці.md
+++ b/Закони/Про_оплату_праці.md
@@ -93,7 +93,7 @@
 
 Порядок розроблення та затвердження професійних стандартів визначається Кабінетом Міністрів України.
 
-Порядок розроблення та затвердження кваліфікаційних характеристик визначається центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці трудових відносин та зайнятості населення.
+Порядок розроблення та затвердження кваліфікаційних характеристик визначається центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці та соціальної політики.
 
 Колективним договором, а якщо договір не укладався - актом роботодавця, виданим після погодження з виборним органом первинної профспілкової організації (профспілковим представником), а в разі відсутності первинної профспілкової організації - з вільно обраними та уповноваженими представниками (представником) працівників, можуть встановлюватися інші системи оплати праці.
 
@@ -142,9 +142,9 @@
 
 Обсяги витрат на оплату праці працівників установ і організацій, що фінансуються з бюджету, затверджуються одночасно з бюджетом.
 
-**Стаття 13-1.** Основні повноваження центрального органу виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення
+**Стаття 13-1.** Основні повноваження центрального органу виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення
 
-Центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сфері праці, трудових відносин та зайнятості населення:
+Центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сферах трудових відносин, соціального захисту населення:
 
 * розробляє нормативно-правові акти з питань умов і розмірів оплати праці працівників підприємств, установ та організацій, що фінансуються чи дотуються з бюджету, керівників підприємств, заснованих на державній, комунальній власності;
 
