--- a/Закони/Про_охорону_праці.md
+++ b/Закони/Про_охорону_праці.md
@@ -458,7 +458,7 @@
 
 Центральний орган виконавчої влади, що реалізує державну політику з питань нагляду та контролю за додержанням законодавства про працю, забезпечує проведення державної експертизи умов праці із залученням центрального органу виконавчої влади, що реалізує державну політику у сфері санітарного та епідемічного благополуччя населення, здійснює контроль за якістю проведення атестації робочих місць за умовами праці.
 
-Порядок контролю за якістю проведення атестації робочих місць за умовами праці визначає центральний орган виконавчої влади, що забезпечує формування державної політики у сфері охорони праці.
+Порядок контролю за якістю проведення атестації робочих місць за умовами праці визначає центральний орган виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин та соціального захисту населення.
 
 Центральний орган виконавчої влади, що реалізує державну політику у сфері охорони праці:
 
