--- a/Закони/Про_професійний_розвиток_працівників.md
+++ b/Закони/Про_професійний_розвиток_працівників.md
@@ -41,7 +41,7 @@
 
 **Стаття 3.** Управління у сфері професійного розвитку працівників
 
-1. Державне управління у сфері професійного розвитку працівників здійснюється центральним органом виконавчої влади що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення, центральним органом виконавчої влади у сфері освіти і науки, іншими центральними та місцевими органами виконавчої влади відповідно до їх повноважень.
+1. Державне управління у сфері професійного розвитку працівників здійснюється центральним органом виконавчої влади у сфері соціальної політики, центральним органом виконавчої влади у сфері освіти і науки, молоді та спорту, іншими центральними та місцевими органами виконавчої влади відповідно до їх повноважень.
 
 2. Безпосереднє управління у сфері професійного розвитку працівників здійснюють роботодавці шляхом організації професійного навчання працівників, їх атестації.
 
@@ -90,7 +90,7 @@
 
 3. Роботодавець може утворити окремий підрозділ з питань професійного навчання працівників або покласти функції з організації такого навчання на відповідних фахівців.
 
-4. Професійне навчання працівників організовується в порядку, визначеному центральним органом виконавчої влади що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення за погодженням з центральним органом виконавчої влади у сфері освіти і науки, іншими заінтересованими центральними органами виконавчої влади, всеукраїнськими об’єднаннями професійних спілок, всеукраїнськими об’єднаннями організацій роботодавців.
+4. Професійне навчання працівників організовується в порядку, визначеному центральним органом виконавчої влади у сфері соціальної політики за погодженням з центральним органом виконавчої влади у сфері освіти і науки, молоді та спорту, іншими заінтересованими центральними органами виконавчої влади, всеукраїнськими об’єднаннями професійних спілок, всеукраїнськими об’єднаннями організацій роботодавців.
 
 5. Роботодавці можуть здійснювати формальне і неформальне професійне навчання працівників.
 
@@ -114,7 +114,7 @@
 
 1. Професійне навчання працівників робітничим професіям здійснюється за навчальними планами і програмами, розробленими професійно-технічними навчальними закладами або підприємствами, установами, організаціями на підставі типових навчальних планів і програм.
 
-2. У разі підготовки, перепідготовки та підвищення кваліфікації працівників для виконання робіт з підвищеною небезпекою кількість годин для вивчення предмета "Охорона праці" визначається з урахуванням специфіки професії, умов праці та строку навчання, але не менш як кількість, що передбачена типовим положенням про порядок проведення навчання і перевірки знань з питань охорони праці, затвердженим центральним органом виконавчої влади що забезпечує формування державної політики у сфері охорони праці.
+2. У разі підготовки, перепідготовки та підвищення кваліфікації працівників для виконання робіт з підвищеною небезпекою кількість годин для вивчення предмета "Охорона праці" визначається з урахуванням специфіки професії, умов праці та строку навчання, але не менш як кількість, що передбачена типовим положенням про порядок проведення навчання і перевірки знань з питань охорони праці, затвердженим центральним органом виконавчої влади з нагляду за охороною праці.
 
 **Стаття 9.** Кадрове забезпечення професійного навчання працівників безпосередньо у роботодавця
 
