--- a/Закони/Про_реабілітацію_осіб_з_інвалідністю_в_Україні.md
+++ b/Закони/Про_реабілітацію_осіб_з_інвалідністю_в_Україні.md
@@ -137,7 +137,7 @@
 
 Державне управління системою реабілітації осіб з інвалідністю покладається на центральні і місцеві органи виконавчої влади, органи місцевого самоврядування, які в межах своїх повноважень здійснюють керівництво підприємствами, установами, закладами системи реабілітації осіб з інвалідністю, аналітично-прогнозну діяльність, визначають тенденції розвитку і вплив демографічної, соціально-економічної, екологічної ситуації, інфраструктури виробничої та невиробничої сфер, ринку праці на стан інвалідності населення, формують напрями взаємодії різних ланок системи реабілітації осіб з інвалідністю, стратегічні напрями її розвитку, узагальнюють світовий і вітчизняний досвід у цій сфері.
 
-Державне управління системою реабілітації осіб з інвалідністю у межах своєї компетенції здійснюють центральні органи виконавчої влади, що забезпечують формування державної політики у сферах соціального захисту населення, охорони здоров’я, освіти, культури, фізичної культури і спорту, будівництва та архітектури, інші центральні органи виконавчої влади, які у межах своїх повноважень займаються формуванням і (чи) реалізацією державної політики у сфері соціального захисту населення та/або здійснюють заходи з реабілітації осіб з інвалідністю, дітей з інвалідністю.
+Державне управління системою реабілітації осіб з інвалідністю у межах своєї компетенції здійснюють центральні органи виконавчої влади, що забезпечують формування державної політики у сферах трудових відносин, соціального захисту населення, охорони здоров’я, освіти, культури, фізичної культури і спорту, будівництва та архітектури, інші центральні органи виконавчої влади, які у межах своїх повноважень займаються формуванням і (чи) реалізацією державної політики у сфері соціального захисту населення та/або здійснюють заходи з реабілітації осіб з інвалідністю, дітей з інвалідністю.
 
 Центральні органи виконавчої влади в межах своїх повноважень координують діяльність місцевих органів виконавчої влади у здійсненні реабілітаційних заходів, організовують розробку та виконання цільових державних програм, запроваджують правові, економічні та організаційні механізми, що стимулюють ефективну діяльність реабілітаційних установ і забезпечують розвиток їх мережі, сприяють міжнародному співробітництву.
 
@@ -212,9 +212,9 @@
 ## Розділ II
 ## ПОВНОВАЖЕННЯ ОРГАНІВ ВИКОНАВЧОЇ ВЛАДИ У СФЕРІ РЕАБІЛІТАЦІЇ ОСІБ З ІНВАЛІДНІСТЮ
 
-**Стаття 9.** Повноваження центрального органу виконавчої влади, що забезпечує формування державної політики у сфері, соціального захисту населення
+**Стаття 9.** Повноваження центрального органу виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення
 
-Центральний орган виконавчої влади, що забезпечує формування державної політики у сфері, соціального захисту населення, у межах своїх повноважень щодо здійснення державної політики у сфері реабілітації осіб з інвалідністю:
+Центральний орган виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, у межах своїх повноважень щодо здійснення державної політики у сфері реабілітації осіб з інвалідністю:
 
 * розробляє нормативно-правові акти з питань соціального захисту осіб з інвалідністю, дітей з інвалідністю, здійснює контроль за додержанням законодавства, що регламентує правовідносини у сфері соціального захисту осіб з інвалідністю;
 
@@ -252,7 +252,7 @@
 
 * здійснює моніторинг забезпечення осіб з інвалідністю санаторно-курортними путівками, автомобілями, технічними та іншими засобами реабілітації; виплати грошових компенсацій на бензин, ремонт і технічне обслуговування автомобілів та на транспортне обслуговування, замість санаторно-курортної путівки та вартості самостійного санаторно-курортного лікування, аналіз відповідності розмірів цих компенсацій їх фактичним витратам;
 
-* забезпечує координацію заходів центральних та місцевих органів виконавчої влади, органів місцевого самоврядування, підприємств, установ та організацій щодо імплементації та реалізації Конвенції ООН про права осіб з інвалідністю, готує та подає центральному органу виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, звіт про вжиті заходи та проект доповіді у Комітет з прав осіб з інвалідністю ООН;
+* забезпечує координацію заходів центральних та місцевих органів виконавчої влади, органів місцевого самоврядування, підприємств, установ та організацій щодо імплементації та реалізації Конвенції ООН про права осіб з інвалідністю, готує та подає центральному органу виконавчої влади, що забезпечує формування та реалізує державну політику у сферах трудових відносин, соціального захисту населення, звіт про вжиті заходи та проект доповіді у Комітет з прав осіб з інвалідністю ООН;
 
 * співпрацює з громадськими організаціями осіб з інвалідністю і ветеранів, здійснює моніторинг заходів, проведених цими організаціями, аналізує ефективність таких заходів;
 
@@ -339,11 +339,11 @@
 
 * загальноосвітні санаторні школи (школи-інтернати) - загальноосвітні навчальні заклади I-III ступенів з відповідним профілем системи освіти для дітей, які потребують тривалого лікування;
 
-* навчальні заклади, які належать до сфери управління центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сфері, соціального захисту населення;
+* навчальні заклади, які належать до сфери управління центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сферах трудових відносин, соціального захисту населення;
 
 * установи соціального обслуговування осіб з інвалідністю, дітей з інвалідністю незалежно від відомчого підпорядкування, типу і форми власності;
 
-* санаторно-курортні установи, які належать до сфери управління центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сфері, соціального захисту населення;
+* санаторно-курортні установи, які належать до сфери управління центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сферах трудових відносин, соціального захисту населення;
 
 * протезно-ортопедичні підприємства незалежно від відомчого підпорядкування, типу і форми власності;
 
@@ -397,7 +397,7 @@
 
 Державна типова програма реабілітації осіб з інвалідністю встановлює гарантований державою перелік послуг з медичної, психолого-педагогічної, фізичної, професійної, трудової, фізкультурно-спортивної, побутової і соціальної реабілітації, технічних та інших засобів реабілітації, виробів медичного призначення, які надаються особі з інвалідністю, дитині з інвалідністю з урахуванням фактичних потреб залежно від віку, статі, виду захворювання безоплатно або на пільгових умовах.
 
-Державна типова програма реабілітації осіб з інвалідністю розробляється центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, за участю інших центральних органів виконавчої влади, які здійснюють державне управління системою реабілітації осіб з інвалідністю, з урахуванням пропозицій всеукраїнських громадських організацій осіб з інвалідністю.
+Державна типова програма реабілітації осіб з інвалідністю розробляється центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, за участю інших центральних органів виконавчої влади, які здійснюють державне управління системою реабілітації осіб з інвалідністю, з урахуванням пропозицій всеукраїнських громадських організацій осіб з інвалідністю.
 
 Державна типова програма реабілітації осіб з інвалідністю і порядок її реалізації погоджуються Радою у справах осіб з інвалідністю при Кабінеті Міністрів України та затверджуються Кабінетом Міністрів України.
 
@@ -539,7 +539,7 @@
 
 Для забезпечення догляду за особою з інвалідністю, дитиною з інвалідністю з важкими формами інвалідності у разі тимчасової відсутності осіб, які доглядають за нею (під час хвороби, відпустки, у вихідні дні), органи виконавчої влади, органи місцевого самоврядування створюють відділення тимчасового перебування осіб з інвалідністю, дітей з інвалідністю при установах соціального обслуговування, реабілітаційних установах, а також можуть створювати будинки тимчасового перебування осіб з інвалідністю.
 
-Порядок здійснення реабілітаційних заходів визначається Кабінетом Міністрів України за поданням центрального органу виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, інших центральних органів виконавчої влади в межах їх повноважень.
+Порядок здійснення реабілітаційних заходів визначається Кабінетом Міністрів України за поданням центрального органу виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, інших центральних органів виконавчої влади в межах їх повноважень.
 
 **Стаття 26.** Засоби реабілітації осіб з інвалідністю
 
@@ -573,7 +573,7 @@
 
 Облік осіб з інвалідністю, дітей з інвалідністю, які забезпечуються технічними та іншими засобами реабілітації, виробами медичного призначення, спеціальним автотранспортом, у межах повноважень здійснюють місцева державна адміністрація і охорони здоров'я.
 
-Безкоштовне забезпечення технічними та іншими засобами реабілітації за індивідуальною заявкою особи з інвалідністю, послугами з післягарантійного ремонту здійснюється у вигляді грошової допомоги особам з інвалідністю для оплати вартості виданих виробів та наданих послуг шляхом безготівкового перерахування коштів підприємствам, що виконали зазначені заявки та відповідають кваліфікаційним вимогам, які визначені центральним органом виконавчої влади, що забезпечує формування державної політики у сферах соціального захисту населення.
+Безкоштовне забезпечення технічними та іншими засобами реабілітації за індивідуальною заявкою особи з інвалідністю, послугами з післягарантійного ремонту здійснюється у вигляді грошової допомоги особам з інвалідністю для оплати вартості виданих виробів та наданих послуг шляхом безготівкового перерахування коштів підприємствам, що виконали зазначені заявки та відповідають кваліфікаційним вимогам, які визначені центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 Перелік технічних та інших засобів реабілітації, порядок забезпечення ними осіб з інвалідністю, дітей з інвалідністю затверджуються Кабінетом Міністрів України.
 
@@ -649,7 +649,7 @@
 
 При здійсненні реабілітаційних заходів діти з інвалідністю користуються всіма правами, визначеними в цій статті для осіб з інвалідністю. Права дітей з інвалідністю реалізуються за рішенням чи за участі їх законних представників.
 
-Особи з інвалідністю, діти з інвалідністю, які проходять реабілітацію в реабілітаційних установах, забезпечуються реабілітаційними установами безоплатним транспортним обслуговуванням у порядку, визначеному центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення.
+Особи з інвалідністю, діти з інвалідністю, які проходять реабілітацію в реабілітаційних установах, забезпечуються реабілітаційними установами безоплатним транспортним обслуговуванням у порядку, визначеному центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці та соціальної політики.
 
 **Стаття 32.** Порядок і умови отримання реабілітаційних послуг
 
@@ -659,7 +659,7 @@
 
 Для отримання реабілітаційних послуг у недержавній реабілітаційній установі особа з інвалідністю, законний представник дитини з інвалідністю повинна/повинен звернутися до цієї реабілітаційної установи.
 
-У разі неможливості реабілітації особи з інвалідністю, дитини з інвалідністю в Україні і за наявності відповідних коштів центральні органи виконавчої влади, що забезпечують формування державної політики у сферах соціального захисту населення, охорони здоров'я, в межах своїх повноважень приймають рішення про направлення особи з інвалідністю, дитини з інвалідністю на реабілітацію за кордон.
+У разі неможливості реабілітації особи з інвалідністю, дитини з інвалідністю в Україні і за наявності відповідних коштів центральні органи виконавчої влади, що забезпечують формування державної політики у сферах трудових відносин, соціального захисту населення, охорони здоров'я, в межах своїх повноважень приймають рішення про направлення особи з інвалідністю, дитини з інвалідністю на реабілітацію за кордон.
 
 **Стаття 33.** Медична реабілітація
 
@@ -749,7 +749,7 @@
 
 Фізкультурно-спортивна реабілітація спрямовується на підвищення рухової активності, оздоровлення, формування компенсаторних функцій організму і позитивної мотивації в осіб з інвалідністю, дітей з інвалідністю до суспільної адаптації.
 
-Фізкультурно-спортивну реабілітацію, проведення з особами з інвалідністю, дітьми з інвалідністю фізкультурно-оздоровчих і спортивних заходів організовують центральні органи виконавчої влади, що реалізують державну політику у сферах соціального захисту населення, освіти, молоді, фізичної культури та спорту.
+Фізкультурно-спортивну реабілітацію, проведення з особами з інвалідністю, дітьми з інвалідністю фізкультурно-оздоровчих і спортивних заходів організовують центральні органи виконавчої влади, що реалізують державну політику у сферах трудових відносин, соціального захисту населення, освіти, молоді, фізичної культури та спорту.
 
 Особам з інвалідністю, дітям з інвалідністю послуги з фізкультурно-спортивної реабілітації реабілітаційними установами державної і комунальної форм власності надаються безоплатно.
 
