--- a/Закони/Про_статус_ветеранів_війни,_гарантії_їх_соціального_захисту.md
+++ b/Закони/Про_статус_ветеранів_війни,_гарантії_їх_соціального_захисту.md
@@ -67,6 +67,7 @@
 До ветеранів війни належать: учасники бойових дій, особи з інвалідністю внаслідок війни, учасники війни.
 
 **Стаття 5.** Учасники бойових дій
+
 Учасниками бойових дій є особи, які брали участь у виконанні бойових завдань по захисту Батьківщини у складі військових підрозділів, з'єднань, об'єднань всіх видів і родів військ Збройних Сил діючої армії (флоту), у партизанських загонах і підпіллі та інших формуваннях як у воєнний, так і у мирний час \*.
 
 \* *Перелік підрозділів, що входили до складу діючої армії, та інших формувань визначається Кабінетом Міністрів України.*
@@ -694,11 +695,11 @@
 
 **Стаття 17-1.** Виплата разової грошової допомоги
 
-Щорічну виплату разової грошової допомоги до 5 травня в розмірах, передбачених статтями 12-16 цього Закону, здійснює центральний орган виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, через відділення зв'язку або через установи банків (шляхом перерахування на особовий рахунок отримувача) пенсіонерам - за місцем отримання пенсії, а особам, які не є пенсіонерами, - за місцем їх проживання чи одержання грошового утримання.
+Щорічну виплату разової грошової допомоги до 5 травня в розмірах, передбачених статтями 12-16 цього Закону, здійснює центральний орган виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, через відділення зв'язку або через установи банків (шляхом перерахування на особовий рахунок отримувача) пенсіонерам - за місцем отримання пенсії, а особам, які не є пенсіонерами, - за місцем їх проживання чи одержання грошового утримання.
 
 Військовослужбовцям, поліцейським, особам начальницького та рядового складу органів внутрішніх справ України, особам начальницького і рядового складу Державної кримінально-виконавчої служби України, які проходять службу (крім пенсіонерів), виплата разової грошової допомоги здійснюється шляхом перерахування коштів органами праці та соціального захисту населення на спеціальні рахунки військових частин, установ і організацій за місцем їх служби.
 
-Особам, які тримаються в установах виконання покарань і слідчих ізоляторах (крім пенсіонерів), виплата разової грошової допомоги здійснюється шляхом перерахування коштів центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, на спеціальні рахунки установ виконання покарань і слідчих ізоляторів.
+Особам, які тримаються в установах виконання покарань і слідчих ізоляторах (крім пенсіонерів), виплата разової грошової допомоги здійснюється шляхом перерахування коштів центральним органом виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту населення, на спеціальні рахунки установ виконання покарань і слідчих ізоляторів.
 
 Особи, які не отримали разової грошової допомоги до 5 травня, мають право звернутися за нею та отримати її до 30 вересня відповідного року, в якому здійснюється виплата допомоги.
 
@@ -745,4 +746,3 @@
 Ідентифікатор: [3551-XII](https://zakon.rada.gov.ua/laws/show/3551-12)
 
 [Картка документа](https://zakon.rada.gov.ua/laws/card/3551-12)
-
