--- a/Кодекси/Кодекс_законів_про_працю_України.md
+++ b/Кодекси/Кодекс_законів_про_працю_України.md
@@ -1032,7 +1032,7 @@
 
 Порядок розроблення та затвердження професійних стандартів визначається Кабінетом Міністрів України.
 
-Порядок розроблення та затвердження кваліфікаційних характеристик визначається центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці трудових відносин та зайнятості населення.
+Порядок розроблення та затвердження кваліфікаційних характеристик визначається центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці та соціальної політики.
 
 Колективним договором, а якщо договір не укладався - наказом (розпорядженням) власника або уповноваженого ним органу, виданим після погодження з виборним органом первинної профспілкової організації (профспілковим представником), а в разі відсутності первинної профспілкової організації - з вільно обраними та уповноваженими представниками (представником) працівників, можуть встановлюватися інші системи оплати праці.
 
@@ -1332,7 +1332,7 @@
 
 Колективна (бригадна) матеріальна відповідальність установлюється власником або уповноваженим ним органом за погодженням з виборним органом первинної профспілкової організації (профспілковим представником) підприємства, установи, організації. Письмовий договір про колективну (бригадну) матеріальну відповідальність укладається між підприємством, установою, організацією і всіма членами колективу (бригади).
 
-Перелік робіт, при виконанні яких може запроваджуватися колективна (бригадна) матеріальна відповідальність, умови її застосування, а також типовий договір про колективну (бригадну) матеріальну відповідальність розробляються за участю профспілкових об'єднань України та затверджуються центральним органом виконавчої влади, що забезпечує формування державної політики у сфері праці, трудових відносин та зайнятості населення.
+Перелік робіт, при виконанні яких може запроваджуватися колективна (бригадна) матеріальна відповідальність, умови її застосування, а також типовий договір про колективну (бригадну) матеріальну відповідальність розробляються за участю профспілкових об'єднань України та затверджуються центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
 **Стаття 135-3.** Визначення розміру шкоди
 
